--- a/famlonga-nicolo-fila_a/src/app/cassettiera/cassettiera.html
+++ b/famlonga-nicolo-fila_a/src/app/cassettiera/cassettiera.html
@@ -1,7 +1,7 @@
-<p>cassettiera works!</p>
+
 
  @for (i of lista; track i) {
-        <li><app-casella-posta [utente] = "i"></app-casella-posta></li>
+        <app-casella-posta [utente] = "i"></app-casella-posta>
     }
 
     
