--- a/famlonga-nicolo-fila_a/src/app/casella-posta/casella-posta.html
+++ b/famlonga-nicolo-fila_a/src/app/casella-posta/casella-posta.html
@@ -1,5 +1,8 @@
-{{utente}} 
- 
-@for(i of lista1; track i ) {
-    {{i}}
-}
+<div class="container text-center">
+    <div class="row p-3 mb-2 bg-primary-subtle text-primary-emphasis border border-primary border border-5">
+        <p> casella postale di {{utente}}: <br><p>contenuto:</p> </p>
+        @for(i of lista1; track i ) {
+            <p>{{i}},</p>
+        }
+    </div>
+</div>
