--- a/famlonga-nicolo-fila_a/src/app/casella-posta/casella-posta.html
+++ b/famlonga-nicolo-fila_a/src/app/casella-posta/casella-posta.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center col-sm-1 col-md-3 col-lg-5">
     <div class="row p-3 mb-2 bg-primary-subtle text-primary-emphasis border border-primary border border-5">
         <p> casella postale di {{utente}}: <br><p>contenuto:</p> </p>
         @for(i of lista1; track i ) {
